# RalpheeController

./: .gitignore  README.md  main.cpp  moteus_motor.conf  motor_test.py  pyproject.toml  sender.cpp  sender.hpp  test.py
src/: controller.py  main.py  motor_control.py  servo_control.py
